--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 nav{
-    padding-top: 20px;
-    text-align: center;
+    display: flex;
+    justify-content: center;
 }
 
 header{
@@ -52,6 +52,57 @@ body{
 }
 .IntroText{
     color: black;
+}
+
+.Stats{
+    padding-top: 5%;
+    display: flex;
+    justify-content: center;
+}
+
+.TimeText, .AccuracyText{
+    display: flex;
+    flex-direction: column;
+    text-transform: uppercase;
+}
+
+.Time, .Accuracy{
+    background-color: #5696CB;
+    border: 4px solid black;
+    border-radius: 5%;
+    height: 70px;
+    width: 200px;
+    color: white;
+    text-shadow: 1px 2px grey;
+}
+
+.Time{
+    margin-right: 3%;
+}
+
+.Accuracy{
+    margin-left: 3%;
+}
+
+.Display{
+    padding-top: 2%;
+    padding-bottom: 2%;
+    margin-top: 3%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: auto;
+    border: 4px solid black;
+    background-color: lightblue;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.DisplayText{
+    color: black;
+    padding-left: 2%;
+    padding-right: 2%;
 }
 
 footer{
