--- a/style.css
+++ b/style.css
@@ -105,6 +105,49 @@ body{
     padding-right: 2%;
 }
 /*^^ Typing Test ^^*/
+
+/*vv Reaction Speed vv*/
+
+#ClickBox{
+    background-color: red;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    margin-top: 3%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70%;
+    height: 300px;
+    border: 4px solid black;
+    margin-left: 15%;
+    margin-right: 15%;
+}
+.ResultBoxes{
+    display: flex;    
+    margin-left: 15%;
+    margin-right: 15%;
+
+  
+    
+}
+.ResultBox1,.ResultBox2,.ResultBox3,.ResultBox4,.ResultBox5{
+    background-color: lightgoldenrodyellow;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    margin-top: 3%;
+    display: flex;
+    width: 20%;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    border: 4px solid black;
+
+
+}
+
+
+/*^^ Reaction Speed ^^*/
+
 footer{
     padding-top: 5%;
     background-color: #716868;
