--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ body{
 .Display{
     padding-top: 2%;
     padding-bottom: 2%;
-    margin-top: 3%;
+    margin-top: 2%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -104,6 +104,29 @@ body{
     padding-left: 2%;
     padding-right: 2%;
 }
+
+.Input{
+    padding-top: 2%;
+    padding-bottom: 2%;
+    margin-top: 1%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    height: auto;
+    border: 4px solid black;
+    background-color: lightgrey;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+.InputText{
+    color: black;
+    padding-left: 2%;
+    padding-right: 2%;
+    font-size: 25px;
+}
+
 /*^^ Typing Test ^^*/
 
 /*vv Reaction Speed vv*/
