--- a/style.css
+++ b/style.css
@@ -43,8 +43,7 @@ body{
     margin: auto;
     width: 70%;
     height: 1000px;
-    padding-top: 3%;
-    padding-bottom: 3%;
+    padding-top: 2%;
     background-color: whitesmoke;
     font-size: 30px;
     text-align: left;
@@ -94,7 +93,7 @@ body{
     width: 80%;
     height: auto;
     border: 4px solid black;
-    background-color: lightblue;
+    background-color: #ebebf2;
     margin-left: 10%;
     margin-right: 10%;
 }
@@ -115,7 +114,7 @@ body{
     width: 60%;
     height: auto;
     border: 4px solid black;
-    background-color: lightgrey;
+    background-color: #dddddd;
     margin-left: 20%;
     margin-right: 20%;
 }
@@ -133,39 +132,30 @@ body{
 
 #ClickBox{
     background-color: red;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    margin-top: 3%;
+    margin-top: 2%;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 70%;
-    height: 300px;
-    border: 4px solid black;
-    margin-left: 15%;
-    margin-right: 15%;
+    width: 100%;
+    height: 420px;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
 }
 .ResultBoxes{
-    display: flex;    
-    margin-left: 15%;
-    margin-right: 15%;
-
-  
-    
+    display: flex;
 }
+
 .ResultBox1,.ResultBox2,.ResultBox3,.ResultBox4,.ResultBox5{
     background-color: lightgoldenrodyellow;
     padding-top: 2%;
     padding-bottom: 2%;
-    margin-top: 3%;
+    margin-top: 2%;
     display: flex;
     width: 20%;
     justify-content: center;
     align-items: center;
     height: 50px;
     border: 4px solid black;
-
-
 }
 
 
