--- a/style.css
+++ b/style.css
@@ -56,52 +56,86 @@ body{
 
 /*vv Reaction Speed vv*/
 
-#app {
-    display: flex;
-    margin-top: 2%;
-    width: 100%;
-    height: 600px;
-    font-family: "Open Sans", sans-serif;
-    font-weight: bold;
+ {
+    box-sizing: border-box;
   }
   
-  .click-area {
-    flex-grow: 1;
+  body {
+    margin: 0;
+  }
   
-    display: flex;
-    align-items: center;
+  .clickable-area {
+    height: 100vh;
+    width: 100%;
+    cursor: pointer;
+    background: limegreen;
+    display: grid;
+    place-items: center;
+    font-size: 32px;
+    font-family: "Roboto", sans-serif;
+    color: #fff;
+  }
   
-    background: #950000;
+  .end-screen,
+  .main-menu {
+    display: none;
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background: #0d3b66;
+    color: #fff;
+    font-family: "Roboto", sans-serif;
+    text-align: center;
+  }
+  
+  .main-menu.active,
+  .end-screen.active {
+    display: grid;
+    place-items: center;
+  }
+  
+  .main-menu {
     cursor: pointer;
   }
   
-  .display-text {
-    padding: 24px;
-    width: 100%;
-    text-align: center;
-    font-size: 24px;
-    color: #ffffff;
+  .container {
+    max-width: 700px;
+    padding: 0 32px;
   }
   
-  .recent-scores {
-    display: flex;
-    flex-direction: column;
-    width: 125px;
-    flex-shrink: 0;
+  .main-menu h1 {
+    font-size: 70px;
+    margin: 8px 0;
   }
   
-  .score {
-    flex-grow: 1;
-  
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  
-    padding: 16px;
+  .container p {
+    font-size: 20px;
+    line-height: 2;
+    font-weight: 800;
+    margin: 0;
   }
   
-  .score:nth-child(odd) {
-    background: #eeeeee;
+  .end-screen h1 {
+    font-size: 30px;
+  }
+  
+  .reaction-time-text {
+    font-size: 100px;
+    font-weight: 900;
+  }
+  
+  .end-screen .play-again-btn {
+    border: none;
+    background: #faf0ca;
+    font-size: 20px;
+    padding: 8px 32px;
+    margin-top: 20px;
+    text-transform: uppercase;
+    font-weight: 900;
+    letter-spacing: 4px;
+    cursor: pointer;
   }
 
 /*^^ Reaction Speed ^^*/
