--- a/style.css
+++ b/style.css
@@ -1,13 +1,24 @@
 nav{
     display: flex;
     justify-content: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.imgLogo{
+  width: 250px;
+  height: 250px;
+  margin-left: 30px;
+  margin-right: 30px;
+  float: left;
 }
 
 header{
     margin: 0;
     padding: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
     background-color: #4584b7;
-    height: 80px;
+    height: 100px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -18,7 +29,7 @@ p{
 }
 
 a{
-    font-size: xx-large;
+    font-size: 40px;
     padding: 20px;
     color: white;
 }
@@ -31,112 +42,105 @@ body{
 }
 
 .Titel{
-    background-color: #5696CB;
-    padding-bottom: 10px;
-    font-size: 60px;
-    text-shadow: 1px 4px grey;
+    padding-bottom: 50px;
+    font-size: 50px;
     text-align: center;
-    color: white;
+    color: rgb(31, 28, 28);
+    font-weight: bold;
 }
 
-.Header{
+.headerDiv{
     margin: auto;
     width: 70%;
     height: 1000px;
     padding-top: 2%;
     background-color: whitesmoke;
     font-size: 30px;
-    text-align: left;
-    text-align: center;
 }
+
+
 .IntroText{
-    color: black;
-    font-size: 35px;
+    color: rgb(43, 39, 39);
+    font-size: 32px;
 }
 
 /*vv Reaction Speed vv*/
+body {
+  margin: 0;
+}
 
- {
-    box-sizing: border-box;
-  }
-  
-  body {
-    margin: 0;
-  }
-  
-  .clickable-area {
-    height: 100vh;
-    width: 100%;
-    cursor: pointer;
-    background: limegreen;
-    display: grid;
-    place-items: center;
-    font-size: 32px;
-    font-family: "Roboto", sans-serif;
-    color: #fff;
-  }
-  
-  .end-screen,
-  .main-menu {
-    display: none;
-    position: fixed;
-    height: 100vh;
-    width: 100%;
-    top: 0;
-    left: 0;
-    background: #0d3b66;
-    color: #fff;
-    font-family: "Roboto", sans-serif;
-    text-align: center;
-  }
-  
-  .main-menu.active,
-  .end-screen.active {
-    display: grid;
-    place-items: center;
-  }
-  
-  .main-menu {
-    cursor: pointer;
-  }
-  
-  .container {
-    max-width: 700px;
-    padding: 0 32px;
-  }
-  
-  .main-menu h1 {
-    font-size: 70px;
-    margin: 8px 0;
-  }
-  
-  .container p {
-    font-size: 20px;
-    line-height: 2;
-    font-weight: 800;
-    margin: 0;
-  }
-  
-  .end-screen h1 {
-    font-size: 30px;
-  }
-  
-  .reaction-time-text {
-    font-size: 100px;
-    font-weight: 900;
-  }
-  
-  .end-screen .play-again-btn {
-    border: none;
-    background: #faf0ca;
-    font-size: 20px;
-    padding: 8px 32px;
-    margin-top: 20px;
-    text-transform: uppercase;
-    font-weight: 900;
-    letter-spacing: 4px;
-    cursor: pointer;
-  }
+.clickable-area {
+  height: 89vh;
+  width: 100%;
+  cursor: pointer;
+  background: limegreen;
+  display: grid;
+  place-items: center;
+  font-size: 32px;
+  font-family: "Roboto", sans-serif;
+  color: #fff;
+}
+
+.end-screen,
+.main-menu {
+  display: none;
+  position: fixed;
+  height: 89vh;
+  width: 100%;
+
+  background: #5696CB;
+  color: #fff;
+  font-family: "Roboto", sans-serif;
+  text-align: center;
+}
+
+.main-menu.active,
+.end-screen.active {
+  display: grid;
+  place-items: center;
+}
+
+.main-menu {
+  cursor: pointer;
+}
+
+.container {
+  max-width: 700px;
+  padding: 0 32px;
+}
+
+.main-menu h1 {
+  font-size: 70px;
+  margin: 8px 0;
+}
+
+.container p {
+  font-size: 20px;
+  line-height: 2;
+  font-weight: 800;
+  margin: 0;
+}
+
+.end-screen h1 {
+  font-size: 30px;
+}
+
+.reaction-time-text {
+  font-size: 100px;
+  font-weight: 900;
+}
+
+.end-screen .play-again-btn {
+  border: none;
+  background: #faf0ca;
+  font-size: 20px;
+  padding: 8px 32px;
+  margin-top: 20px;
+  text-transform: uppercase;
+  font-weight: 900;
+  letter-spacing: 4px;
+  cursor: pointer;
+}
 
 /*^^ Reaction Speed ^^*/
 
@@ -157,5 +161,5 @@ a:link{
 }
 
 a:hover{
-    color: red;
+    color: hsl(0, 10%, 86%);
 }
