--- a/tt.css
+++ b/tt.css
@@ -12,10 +12,11 @@ body {
   nav{
     display: flex;
     justify-content: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
   
   a{
-    font-size: xx-large;
+    font-size: 40px;
     padding: 20px;
     color: white;
   }
@@ -24,38 +25,38 @@ body {
     color: white;
 }
 
-a:hover{
-    color: red;
+a:hover{  
+  color: hsl(0, 10%, 86%);
 }
 
 .Titel{
-  background-color: #5696CB;
-  padding-top: 11px;
-  padding-bottom: 11px;
-  margin-top: 0;
-  font-size: 60px;
-  text-shadow: 1px 4px grey;
+  margin-top: 35px;
+  margin-bottom: 50px;
+  font-size: 50px;
   text-align: center;
-  color: white;
-  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(31, 28, 28);
+  font-weight: bold;
 }
 
-.IntroText{
+.IntroText, .OutroText{
+  width: 95%;
+  margin-top: 0;
   text-align: center;
   color: black;
-  font-size: 35px;
+  font-size: 30px;
 }
 
   header{
     margin: 0;
     padding: 0;
+    padding-top: 10px;
+    padding-bottom: 10px;
     background-color: #4584b7;
-    height: 80px;
+    height: 100px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
   .container {
-    margin-top: -60px;
     height: 1000px;
     margin-left: 15%;
     margin-right: 15%;
@@ -78,9 +79,9 @@ a:hover{
     height: 60px;
     width: 70px;
     margin: 8px;
-    padding: 12px;
+    padding: 10px;
     border-radius: 5%;
-    box-shadow: black 5px 8px 5px;
+    box-shadow: black 3px 3px 3px;
   }
   
   .cpm, .wpm  {
@@ -104,7 +105,7 @@ a:hover{
     font-size: 1.5rem;
     margin: 10px;
     padding: 40px;
-    box-shadow: black 5px 8px 5px;
+    box-shadow: black 3px 3px 3px;
   }
   
   .input_area {
@@ -116,7 +117,8 @@ a:hover{
     margin: 15px;
     padding: 20px;
     border: 0px;
-    box-shadow: black 5px 8px 5px;
+    box-shadow: black 3px 3px 3px;
+    max-width: 1000px;
   }
   
   .incorrect_char {
@@ -130,9 +132,9 @@ a:hover{
   
   .restart_btn {
     display: none;
-    background-color: #326765;
+    background-color: #f5f5c6;
     font-size: 1.5rem;
     padding: 10px;
     border: 0px;
-    box-shadow: black 5px 8px 5px;
+    box-shadow: black 3px 3px 3px;
   }
